Bug 906666, treat frozen windows as not visible, so that they don't get focused, r=smaug